# thebiryaniclub

./: app.py  auth.py  config.py  models.py  pyproject.toml  replit  replit.md  requirements.txt  routes.py
attached_assets/attached_assets/: biryaniclub4_1754808602535.py
static/css/: style.css
static/js/: main.js
templates/templates/: base.html  index.html
templates/templates/admin/: dashboard.html  login.html  orders.html  support_tickets.html
templates/templates/components/: notifications.html
templates/templates/customer/: cart.html  checkout.html  menu.html  orders.html  spin.html
templates/templates/delivery/: dashboard.html  login.html
templates/templates/support/: contact.html
